    XProperty to 0. This prevents the kwin decoration thinking that the main config
    dialog has a menubar.
16. Use same radius for all corners of progressbar.
17. Apply menu background settings to menus of non-editable combos. Rounding is
    not applied due to clipping/shadow issues with Gtk2)
18. Allow borderless rounded popup menus.

1.6.1
-----
 1. Add option to have rounded popup menus.
 2. Allow rounded tooltips when not compositing.
 3. Fix kwin titlebar blending for striped backgrounds.
 4. Simplify faded menu item code.
 5. When drawing progressbar contents and label, use same calculations
    to determine position. Fixes odd text on some of Krita's progressbar/spin
    button widgets.
 6. Fix menubar-hiding kwin icon when not blending menubar/titlebar.
 7. 'Fix' konsole titlebar opacity. Note: Menubar is still opaque :-(
 8. Fix background gradient in titlebars when using translucent backgrounds.
 9. Square tooltips for OpenOffice.org
10. Fix windows build.

1.6.0
-----
 1. Add 'glow' focus option - this is now the default.
 2. Fix potential crash in rgbToHsv
 3. Use square-ish focus for view items if using squared selection.
 4. If titlebar opacity=100, and window/dialog opacity does not, then use
    window/dialog opacity for titlebar.
 5. Fix some compiler warnings under openSUSE 11.3
 6. Refactor blur-behind code.
 7. Update XBar code to r1158
 8. Remove KFileDialog code - has been in KDE since 4.1
 9. Dont apply background opacity to kaffeine.
10. Remove amarok from list off apps not to apply opacity to.
11. Fix MDI window border when using opacity.
12. Improved glow mouse-over for non-standard sidebar buttons.
13. Fix dock widget titlebar alignment when set to center on full width (not
    just on text space width).
14. Add option to use slight rounding for window decorations - set in style
    config, as option also affects MDI windows.
15. Added option to specify tooltip background appearance.