@@ -30,6 +30,7 @@
 17. Apply menu background settings to menus of non-editable combos. Rounding is
     not applied due to clipping/shadow issues with Gtk2)
 18. Allow borderless rounded popup menus.
+19. Allow rounded menus when rounding is set to slight.
 
 1.6.1
 -----
